<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/lista"
        android:title="@string/tipo"
        app:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/add_ocorrencia"
        android:title="@string/add_ocorrencia"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/filtrar1"
        android:title="@string/filtrar1"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/filtrar2"
        android:title="@string/filtrar2"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/filtrarall"
        android:title="@string/filtrarall"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never">
    </item>



</menu>