<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E80303"
    tools:context=".atividadeNotaClicada">

    <EditText
        android:id="@+id/tituloNotaClicado"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_margin="100dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/tituloNota"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpoNotaClicado" />

    <EditText
        android:id="@+id/corpoNotaClicado"
        android:layout_width="245dp"
        android:layout_height="83dp"
        android:layout_margin="100dp"
        android:layout_marginTop="148dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/nota"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:backgroundTint="#FFE700"
        android:text="@string/Editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpoNotaClicado" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:backgroundTint="#FFE700"
        android:text="@string/Eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corpoNotaClicado" />
</androidx.constraintlayout.widget.ConstraintLayout>